multi-platform build
Signed-off-by: Tonis Tiigi <tonistiigi@gmail.com>

--- a/binfmt/Dockerfile
+++ b/binfmt/Dockerfile
@@ -1,56 +1,37 @@
-FROM debian@sha256:2f04d3d33b6027bb74ecc81397abe780649ec89f1a2af18d7022737d0482cefe AS qemu
+# syntax=docker/dockerfile:1.1-experimental
 ARG VERSION=v4.1.0
-RUN apt-get update && \
-    apt-get install -y \
-        build-essential \
-        git \
-        libtool \
-        libpixman-1-dev \
-        libglib2.0-dev \
-        pkg-config \
-        python
 
+FROM --platform=$BUILDPLATFORM debian:buster AS src
+RUN apt-get update && apt-get install -y git
+ARG VERSION
+WORKDIR /src
 RUN git clone -b moby/$VERSION https://github.com/moby/qemu && \
-  	cd qemu && scripts/git-submodule.sh update \
-    		ui/keycodemapdb \
-    		tests/fp/berkeley-testfloat-3 \
-    		tests/fp/berkeley-softfloat-3 \
-    		dtc
+  cd qemu && scripts/git-submodule.sh update \
+  ui/keycodemapdb \
+  tests/fp/berkeley-testfloat-3 \
+  tests/fp/berkeley-softfloat-3 \
+  dtc slirp
+
+FROM --platform=$BUILDPLATFORM debian:buster AS qemu
+
+RUN apt-get update && \
+  apt-get install -y \
+  pkg-config \
+  python \
+  dpkg-dev
 
 WORKDIR /qemu
 
-RUN ./configure \
-        --prefix=/usr \
-        --with-pkgversion=$VERSION \
-        --enable-linux-user \
-        --disable-system \
-        --static \
-        --disable-blobs \
-        --disable-bluez \
-        --disable-brlapi \
-        --disable-cap-ng \
-        --disable-capstone \
-        --disable-curl \
-        --disable-curses \
-        --disable-docs \
-        --disable-gcrypt \
-        --disable-gnutls \
-        --disable-gtk \
-        --disable-guest-agent \
-        --disable-guest-agent-msi \
-        --disable-libiscsi \
-        --disable-libnfs \
-        --disable-mpath \
-        --disable-nettle \
-        --disable-opengl \
-        --disable-sdl \
-        --disable-spice \
-        --disable-tools \
-        --disable-vte \
-        --target-list="aarch64-linux-user arm-linux-user ppc64le-linux-user s390x-linux-user riscv64-linux-user"
+ARG TARGETPLATFORM
 
-RUN make -j "$(getconf _NPROCESSORS_ONLN)"
-RUN make install
+ENV PATH=/qemu/install-scripts:$PATH
+RUN --mount=target=./install-scripts,src=scripts \
+  TARGETPLATFORM=${TARGETPLATFORM} cross.sh install gcc libglib2.0-dev | sh
+
+ARG VERSION
+
+RUN --mount=target=.,from=src,src=/src/qemu,rw --mount=target=./install-scripts,src=scripts \
+  TARGETPLATFORM=${TARGETPLATFORM} configure_qemu.sh && make -j "$(getconf _NPROCESSORS_ONLN)" && make install
 
 FROM linuxkit/alpine:27df8a8be139cd19cd7348c21efca8843b424f2b AS mirror
 
@@ -60,10 +41,10 @@ ENV GOPATH=/go PATH=$PATH:/go/bin
 COPY main.go /go/src/binfmt/
 RUN go-compile.sh /go/src/binfmt
 
-FROM scratch
-ENTRYPOINT []
-WORKDIR /
-COPY --from=qemu usr/bin/qemu-* usr/bin/
-COPY --from=mirror /go/bin/binfmt usr/bin/binfmt
-COPY etc/binfmt.d/00_linuxkit.conf etc/binfmt.d/00_linuxkit.conf
-CMD ["/usr/bin/binfmt"]
+FROM scratch AS binaries
+COPY --from=qemu usr/bin/qemu-* /
+
+
+# COPY --from=mirror /go/bin/binfmt usr/bin/binfmt
+# COPY etc/binfmt.d/00_linuxkit.conf etc/binfmt.d/00_linuxkit.conf
+# CMD ["/usr/bin/binfmt"]
