--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,6 @@ on:
     branches:
       - master
 
-env:
-  CACHEKEY_MAINLINE_ALL: "mainline-all"
-  CACHEKEY_BUILDKIT_HELPER_ALL: "buildkit-helper-all"
-
 jobs:
   validate:
     runs-on: ubuntu-latest
@@ -73,13 +69,13 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
-        name: Cache ${{ matrix.target }}
+        name: Cache
         uses: actions/cache@v2
         with:
-          path: /tmp/.binfmt-cache/${{ matrix.target }}
-          key: ${{ runner.os }}-binfmt-${{ matrix.target }}-${{ github.sha }}
+          path: /tmp/.binfmt-cache
+          key: ${{ runner.os }}-binfmt-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-binfmt-${{ matrix.target }}-
+            ${{ runner.os }}-binfmt-
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -101,7 +97,8 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: [ build-base, build ]
+    needs: [ validate, build-base, build ]
+    if: needs.build-base.outputs.push == 'true'
     strategy:
       fail-fast: true
       matrix:
@@ -113,26 +110,24 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
-        name: Cache ${{ matrix.target }}
+        name: Cache
         uses: actions/cache@v2
         with:
-          path: /tmp/.binfmt-cache/${{ matrix.target }}
-          key: ${{ runner.os }}-binfmt-${{ matrix.target }}-${{ github.sha }}
+          path: /tmp/.binfmt-cache
+          key: ${{ runner.os }}-binfmt-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-binfmt-${{ matrix.target }}-
+            ${{ runner.os }}-binfmt-
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
         name: Login to DockerHub
-        if: needs.build-base.outputs.push == 'true'
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERIO_USERNAME }}
           password: ${{ secrets.DOCKERIO_PASSWORD }}
       -
         name: Publish ${{ matrix.target }}
-        if: needs.build-base.outputs.push == 'true'
         run: |
           docker buildx bake --push --progress=plain \
             "--set=*.cache-from=type=local,src=/tmp/.binfmt-cache/${{ matrix.target }}" \
