--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,9 @@ on:
     branches:
       - master
 
+env:
+  REPO_SLUG: tonistiigi/binfmt
+
 jobs:
   validate:
     runs-on: ubuntu-latest
@@ -31,36 +34,15 @@ jobs:
         run: |
           ${{ matrix.script }}
 
-  build-base:
-    runs-on: ubuntu-latest
-    outputs:
-      tag: ${{ steps.prep.outputs.tag }}
-      push: ${{ steps.prep.outputs.push }}
-    steps:
-      -
-        name: Prepare
-        id: prep
-        run: |
-          TAG=na
-          PUSH=false
-          if [[ $GITHUB_REF == refs/pull/* ]]; then
-            TAG=pr-${{ github.event.number }}
-          elif [[ $GITHUB_REF == refs/heads/* ]]; then
-            TAG=$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
-            PUSH=true
-          fi
-          echo ::set-output name=tag::${TAG}
-          echo ::set-output name=push::${PUSH}
-
   build:
     runs-on: ubuntu-latest
-    needs: [ validate, build-base ]
+    needs: [ validate ]
     strategy:
       fail-fast: false
       matrix:
         target:
-          - mainline-all
-          - buildkit-all
+          - mainline
+          - buildkit
     steps:
       -
         name: Checkout
@@ -75,11 +57,26 @@ jobs:
             ${{ runner.os }}-binfmt-${{ matrix.target }}-
             ${{ runner.os }}-binfmt-
       -
+        name: Docker meta
+        id: meta
+        uses: crazy-max/ghaction-docker-meta@v2
+        with:
+          images: ${{ env.REPO_SLUG }}
+          tags: |
+            type=ref,event=branch,enable=${{ matrix.target == 'mainline' }}
+            type=ref,event=branch,prefix=${{ matrix.target }}-,enable=${{ matrix.target != 'mainline' }}
+          flavor: |
+            latest=false
+          labels: |
+            org.opencontainers.image.title=Binfmt
+            org.opencontainers.image.description=Cross-platform emulator collection distributed with Docker images
+          bake-target: meta-helper
+      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
         name: Test
-        if: matrix.target == 'buildkit-all'
+        if: matrix.target == 'buildkit'
         uses: docker/bake-action@v1
         with:
           targets: buildkit-test
@@ -88,7 +85,7 @@ jobs:
         uses: docker/setup-qemu-action@v1
       -
         name: Login to DockerHub
-        if: needs.build-base.outputs.push == 'true'
+        if: startsWith(github.ref, 'refs/heads/')
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERIO_USERNAME }}
@@ -97,10 +94,12 @@ jobs:
         name: Build ${{ matrix.target }}
         uses: docker/bake-action@v1
         with:
-          targets: ${{ matrix.target }}
-          push: ${{ needs.build-base.outputs.push }}
+          files: |
+            ./docker-bake.hcl
+            ${{ steps.meta.outputs.bake-file }}
+          targets: ${{ matrix.target }}-all
+          push: ${{ startsWith(github.ref, 'refs/heads/') }}
           set: |
-            *.tags=${{ needs.build-base.outputs.tag }}
             *.cache-from=type=local,src=/tmp/.binfmt-cache/${{ matrix.target }}
             *.cache-to=type=local,dest=/tmp/.binfmt-cache/${{ matrix.target }}-new
       -
