enable preserve-argv0 by default on mainline
P flag is needed in order for qemu to not lose
argv0 value. Problem is that qemu can only detect that
flag was set on 5.12+ kernels and if it doesn’t detect
it then all argument values are wrong.

This introduces a patch that is enabled on mainline
target that assumes P flag was set if the kernel does
not provide any flags.

Signed-off-by: Tonis Tiigi <tonistiigi@gmail.com>

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -25,6 +25,6 @@ FROM alpine AS run
 RUN apk add libcap
 COPY --from=binary / /usr/bin
 ARG CONFIG_RT_GROUP_SCHED
-RUN --security=insecure /usr/bin/test -test.v
+RUN --security=insecure REEXEC_NAME=/usr/bin/test /usr/bin/test -test.v
 
 FROM binary
