Dockerfile: update golangci-lint to 1.51.1 (go 1.20 support)
Signed-off-by: CrazyMax <crazy-max@users.noreply.github.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,33 +2,21 @@ run:
   timeout: 10m
   skip-files:
     - ".*\\.pb\\.go$"
-
   modules-download-mode: vendor
-
-  build-tags:
-    - dfrunsecurity
 
 linters:
   enable:
-    - deadcode
-    - depguard
     - gofmt
-    - goimports
-    - gosimple
-    - revive
     - govet
-    - importas
+    - depguard
+    - goimports
     - ineffassign
     - misspell
-    - staticcheck
-    - structcheck
-    - typecheck
     - unused
-    - varcheck
-    - bodyclose
-    - errname
-    - makezero
-    - whitespace
+    - revive
+    - staticcheck
+    - typecheck
+    - nolintlint
   disable-all: true
 
 linters-settings:
