add desktop flavor
Signed-off-by: CrazyMax <1951866+crazy-max@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
         target:
           - mainline
           - buildkit
+          - desktop
     steps:
       -
         name: Checkout
@@ -83,6 +84,7 @@ jobs:
         target:
           - mainline
           - buildkit
+          - desktop
     steps:
       -
         name: Checkout
@@ -136,15 +138,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        target:
+          - mainline
+          - desktop
         dockerfile:
           - pip-youtube-dl
           - webpack
         platform:
           - linux/arm/v7
         include:
-          - dockerfile: ejabberd
+          - target: mainline
+            dockerfile: ejabberd
             platform: linux/arm64
-          - dockerfile: tini
+          - target: desktop
+            dockerfile: tini
             platform: linux/arm64
             run: true
     steps:
@@ -155,14 +162,14 @@ jobs:
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Load mainline for testing
+        name: Load for testing
         uses: docker/bake-action@v2
         with:
-          targets: mainline
+          targets: ${{ matrix.target }}
           load: true
           set: |
-            *.cache-from=type=gha,scope=${{ env.CACHE_GHA_SCOPE }}-mainline
-            mainline.tags=tonistiigi/binfmt:test
+            *.cache-from=type=gha,scope=${{ env.CACHE_GHA_SCOPE }}-${{ matrix.target }}
+            *.tags=tonistiigi/binfmt:test
       -
         name: Set up QEMU
         run: |
@@ -198,6 +205,7 @@ jobs:
         target:
           - mainline
           - buildkit
+          - desktop
     steps:
       -
         name: Checkout
